--- a/css/checkbox.css
+++ b/css/checkbox.css
@@ -86,15 +86,7 @@
 }
 
 /* Animation  */
-/* @keyframes fadeInAnimation {
-  0% {
-    opacity: 0;
-  }
 
-  100% {
-    opacity: 1;
-  }
-} */
 
 
 
@@ -113,7 +105,7 @@
 
  @keyframes slide{
   0%{
-    width:0%
+    width:0%;
   }
   50%{
     width:100%
@@ -126,3 +118,60 @@
 
 
 /* Animation  */
+
+
+
+
+
+.loader {
+  position: relative;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background: linear-gradient(
+    45deg,
+    transparent,
+    transparent 40%,
+    #e5f403
+  );
+  animation: animate 1s linear infinite ;
+}
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+    filter: hue-rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+    filter: hue-rotate(360deg);
+  }
+}
+.loader::before {
+  content: "";
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  right: 6px;
+  bottom: 6px;
+  background-color: #000;
+  border-radius: 50%;
+  z-index: 1000;
+}
+.loader::after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  background: linear-gradient(
+    45deg,
+    transparent,
+    transparent 40%,
+    #e5f403
+  );
+  border-radius: 50%;
+  z-index: 1000;
+  z-index: 1;
+  filter: blur(30px);
+}
